--- a/learn-rocketmq/pom.xml
+++ b/learn-rocketmq/pom.xml
@@ -7,6 +7,13 @@
     <groupId>com.littlefxc.examples</groupId>
     <artifactId>learn-rocketmq</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>rocketmq-producer</module>
+        <module>rocketmq-consumer</module>
+    </modules>
+
     <build>
         <plugins>
             <plugin>
@@ -19,12 +26,4 @@
             </plugin>
         </plugins>
     </build>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-client</artifactId>
-            <version>4.3.2</version>
-        </dependency>
-    </dependencies>
 </project>
