--- a/learn-log/Log4j2-JDBCAppender/src/main/resources/db.properties
+++ b/learn-log/Log4j2-JDBCAppender/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-druid.url=jdbc:mysql://localhost:3306/learn?useSSL=false
+druid.url=jdbc:mysql://192.168.120.63:3306/learn?useSSL=false
 druid.username=root
 druid.password=123456
 druid.driverClassName=com.mysql.jdbc.Driver
