数据库文件名修改

--- a/learn-log/Log4j2-JDBCAppender/pom.xml
+++ b/learn-log/Log4j2-JDBCAppender/pom.xml
@@ -34,6 +34,11 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>1.1.10</version>
