--- a/learn-log/pom.xml
+++ b/learn-log/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>Log4j2-JDBCAppender</module>
+        <module>Logback-DBAppender</module>
     </modules>
     <packaging>pom</packaging>
 
