基于MySQL XA的两阶段事务条手动实现

--- a/learn-jta/pom.xml
+++ b/learn-jta/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>learn-jta-atomikos-SpringBoot</module>
         <module>learn-jta-atomikos-SpringMVC</module>
+        <module>MySQL-XA-2PC</module>
     </modules>
 
     <properties>
