feature(learn-spring-security):SpringSecurity学习记录之基于内存的登录/登出

--- a/learn-spring-security/pom.xml
+++ b/learn-spring-security/pom.xml
@@ -10,5 +10,7 @@
 
     <modules>
         <module>InMemoryAuthenticationExample</module>
+        <module>LogInOutExample</module>
+        <module>DbAuthenticationExample</module>
     </modules>
 </project>
