--- a/feign-ribbon-sample/consumer-feign/src/main/resources/application.properties
+++ b/feign-ribbon-sample/consumer-feign/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=consumer-feign
 server.port=8889
 eureka.client.serviceUrl.defaultZone=http://jackie:123456@alpha-eureka-01:8761/eureka/,http://jackie:123456@alpha-eureka-02:8762/eureka/,http://jackie:123456@alpha-eureka-03:8763/eureka/
+# feign \u7194\u65AD\u5668 \u5168\u5C40\u751F\u6548
 feign.hystrix.enabled=true
