feign-ribbon-sample:添加注释/添加docx文档

--- a/feign-ribbon-sample/pom.xml
+++ b/feign-ribbon-sample/pom.xml
@@ -34,8 +34,8 @@
     </dependencyManagement>
 
     <modules>
-        <module>client-feign</module>
-        <module>client-ribbon</module>
+        <module>consumer-feign</module>
+        <module>consumer-ribbon</module>
         <module>provider</module>
         <module>provider-api</module>
     </modules>
