--- a/spring-cloud-alibaba/consumer-nacos/pom.xml
+++ b/spring-cloud-alibaba/consumer-nacos/pom.xml
@@ -2,10 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <groupId>com.fengxuechao.examples</groupId>
-    <artifactId>provider-nacos</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
+
+    <groupId>com.fengxuechao.examples</groupId>
+    <artifactId>consumer-nacos</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
