feature(learn-spring-security):Spring Security Oauth2 Example finish

--- a/learn-spring-security/pom.xml
+++ b/learn-spring-security/pom.xml
@@ -12,5 +12,6 @@
         <module>InMemoryAuthenticationExample</module>
         <module>LogInOutExample</module>
         <module>DbAuthenticationExample</module>
+        <module>SpringSecurityOauth2</module>
     </modules>
 </project>
