feat(learn-spring-security):oauth2 授权服务器完成

--- a/learn-spring-security/pom.xml
+++ b/learn-spring-security/pom.xml
@@ -13,5 +13,6 @@
         <module>LogInOutExample</module>
         <module>DbAuthenticationExample</module>
         <module>SpringSecurityOauth2</module>
+        <module>order-service</module>
     </modules>
 </project>
