fix(dynamic-datasource-rwmysql):docker-compose 在win10 配置mysql主从配置

--- a/dynamic-datasource-rwmysql/docker-compose-mysql-master-slave/docker-compose.yml
+++ b/dynamic-datasource-rwmysql/docker-compose-mysql-master-slave/docker-compose.yml
@@ -30,5 +30,5 @@ services:
       - "MYSQL_REPLICATION_USER=repl"
       - "MYSQL_REPLICATION_PASSWORD=repl"
     volumes:
-      - "./mysql_connector.sh:/tmp/mysql_connector.sh"
-    command: "/bin/bash -x /tmp/mysql_connector.sh"
+      - ./mysql_connector.sh:/tmp/mysql_connector.sh
+    command: /bin/bash -x /tmp/mysql_connector.sh
