feat(learn-spring-security):oauth2 内存授权服务器完成

--- a/learn-spring-security/spring-security-oauth2/pom.xml
+++ b/learn-spring-security/spring-security-oauth2/pom.xml
@@ -3,12 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <groupId>com.fengxuechao</groupId>
-    <version>1.0-snapshot</version>
-    <artifactId>learn-spring-security</artifactId>
-    <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
 
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>sso</artifactId>
+    <packaging>pom</packaging>
+    <version>1.0-snapshot</version>
     <modules>
-        <module>spring-security-oauth2</module>
+        <module>client-app</module>
+        <module>auth-server</module>
     </modules>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.19.RELEASE</version>
+    </parent>
+
+
 </project>
