--- a/learn-spring-security/spring-security-oauth2/auth-server/src/main/resources/application.properties
+++ b/learn-spring-security/spring-security-oauth2/auth-server/src/main/resources/application.properties
@@ -3,12 +3,20 @@ server.port=8081
 mybatis.mapper-locations=mapper/*.xml
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/oauth2?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/learn?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.druid.username=root
 spring.datasource.druid.password=root
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
+
+spring.datasource.initialize=true
+spring.datasource.platform=MYSQL
+spring.datasource.continue-on-error=true
+spring.datasource.schema=classpath:db/schema-mysql.sql
 
 spring.redis.host=127.0.0.1
 spring.redis.database=0
 
 security.oauth2.resource.filter-order=3
+
+security.user.name=admin
+security.user.password=admin
