fix(learn-spring-security/spring-security-oauth2):资源服务模块改名

--- a/learn-spring-security/spring-security-oauth2/pom.xml
+++ b/learn-spring-security/spring-security-oauth2/pom.xml
@@ -9,7 +9,7 @@
     <packaging>pom</packaging>
     <version>1.0-snapshot</version>
     <modules>
-        <module>client-app</module>
+        <module>res-server</module>
         <module>auth-server</module>
     </modules>
     <parent>
