add(learn-spring-security/spring-security-oauth2):添加客户端

--- a/learn-spring-security/spring-security-oauth2/pom.xml
+++ b/learn-spring-security/spring-security-oauth2/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>res-server</module>
         <module>auth-server</module>
+        <module>client</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
