--- a/learn-spring-security/spring-security-oauth2/auth-server/pom.xml
+++ b/learn-spring-security/spring-security-oauth2/auth-server/pom.xml
@@ -39,6 +39,10 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.10</version>
