fix(learn-spring-security):使用 @EnableOAuth2Sso 表示客户端

--- a/learn-spring-security/spring-security-oauth2/client/src/main/resources/application.properties
+++ b/learn-spring-security/spring-security-oauth2/client/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8083
+server.session.cookie.name=CLIENTSESSION
 security.oauth2.client.client-id=client_1
 security.oauth2.client.client-secret=123456
 security.oauth2.client.access-token-uri=http://localhost:8081/oauth/token
