--- a/learn-spring-security/spring-security-oauth2/pom.xml
+++ b/learn-spring-security/spring-security-oauth2/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.fengxuechao</groupId>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>sso</artifactId>
+    <artifactId>spring-security-oauth2</artifactId>
     <packaging>pom</packaging>
     <version>1.0-snapshot</version>
     <modules>
