feat(learn-spring-security):使用 @EnableOAuth2Client 表示客户端

--- a/learn-spring-security/spring-security-oauth2/client/src/main/resources/application.properties
+++ b/learn-spring-security/spring-security-oauth2/client/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port=8083
 server.session.cookie.name=CLIENTSESSION
 security.oauth2.client.client-id=client_1
 security.oauth2.client.client-secret=123456
+#security.oauth2.client.grant-type=client_credentials
 security.oauth2.client.access-token-uri=http://localhost:8081/oauth/token
 security.oauth2.client.user-authorization-uri=http://localhost:8081/oauth/authorize
 security.oauth2.client.scope=all
