--- a/learn-spring-security/spring-security-oauth2/auth-server/src/main/resources/application.properties
+++ b/learn-spring-security/spring-security-oauth2/auth-server/src/main/resources/application.properties
@@ -10,7 +10,11 @@ spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.initialize=true
 spring.datasource.platform=MYSQL
 spring.datasource.continue-on-error=true
-spring.datasource.schema=classpath:db/schema-mysql.sql
+# schema-mysql.sql\uFF1Aoauth2\u7684\u8868\u7ED3\u6784\u7ED3\u6784\uFF0Cschema-security-mysql.sql\uFF1Auser-detail\u7684\u8868\u7ED3\u6784
+spring.datasource.schema=classpath:db/schema-mysql.sql,classpath:db/schema-security-customize2.sql
+spring.datasource.data=classpath:db/data-security-customize2.sql
 
 spring.redis.host=127.0.0.1
 spring.redis.database=0
+
+spring.thymeleaf.cache=false
