--- a/learn-spring-security/pom.xml
+++ b/learn-spring-security/pom.xml
@@ -11,5 +11,6 @@
     <modules>
         <module>spring-security-oauth2</module>
         <module>spring-cloud-oauth2</module>
+        <module>spring-security</module>
     </modules>
 </project>
