--- a/learn-spring-security/spring-security-oauth2/client/src/main/resources/application.properties
+++ b/learn-spring-security/spring-security-oauth2/client/src/main/resources/application.properties
@@ -6,6 +6,7 @@ security.oauth2.client.client-secret=123456
 security.oauth2.client.access-token-uri=http://localhost:8081/oauth/token
 security.oauth2.client.user-authorization-uri=http://localhost:8081/oauth/authorize
 security.oauth2.client.scope=all
+security.oauth2.client.authorities=
 # userInfoUri\u7528\u6237\u7AEF\u70B9\u7684URI\uFF0C\u7528\u4E8E\u83B7\u53D6\u5F53\u524D\u7528\u6237\u8BE6\u7EC6\u4FE1\u606F
 security.oauth2.resource.user-info-uri=http://localhost:8081/user/me
 # \u89E3\u6790\u4EE4\u724C\u7684\u5730\u5740
