feat(learn-spring-security/gate-zuul):oauth2 中添加zuul网关代理

--- a/learn-spring-security/spring-security-oauth2/auth-server/src/main/resources/application.properties
+++ b/learn-spring-security/spring-security-oauth2/auth-server/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 server.port=8081
 
+spring.application.name=auth-server
+
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/learn?useUnicode=true&characterEncoding=utf-8&useSSL=false
-spring.datasource.druid.username=root
-spring.datasource.druid.password=root
+spring.datasource.druid.url=jdbc:mysql://192.168.212.59:3306/test-capacity?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.druid.username=DBcenter
+spring.datasource.druid.password=root@2016
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 
 # \u7A0B\u5E8F\u521D\u59CB\u5316\u52A0\u8F7D\u6570\u636E\u5E93\u811A\u672C
@@ -16,3 +18,5 @@ spring.redis.host=127.0.0.1
 spring.redis.database=0
 
 spring.thymeleaf.cache=false
+
+eureka.client.serviceUrl.defaultZone=http://jackie:123456@alpha-eureka-01:8761/eureka/,http://jackie:123456@alpha-eureka-02:8762/eureka/,http://jackie:123456@alpha-eureka-03:8763/eureka/
