--- a/learn-spring-security/spring-security-oauth2/res-server/src/main/resources/application.properties
+++ b/learn-spring-security/spring-security-oauth2/res-server/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 server.port=8082
+
+spring.application.name=res
+
 security.oauth2.client.client-id=client_1
 security.oauth2.client.client-secret=123456
 # userInfoUri\u7528\u6237\u7AEF\u70B9\u7684URI\uFF0C\u7528\u4E8E\u83B7\u53D6\u5F53\u524D\u7528\u6237\u8BE6\u7EC6\u4FE1\u606F
 security.oauth2.resource.user-info-uri=http://localhost:8081/user/me
+security.oauth2.resource.loadBalanced=true
 # \u89E3\u6790\u4EE4\u724C\u7684\u5730\u5740
 security.oauth2.authorization.check-token-access=http://localhost:8001/oauth/check_token
+
+eureka.client.serviceUrl.defaultZone=http://jackie:123456@alpha-eureka-01:8761/eureka/,http://jackie:123456@alpha-eureka-02:8762/eureka/,http://jackie:123456@alpha-eureka-03:8763/eureka/
