fix(learn-spring-security/auth-server):oauth2 + zuul
ResourceOwnerPasswordResourceDetails 的使用

--- a/learn-spring-security/spring-security-oauth2/gate-zuul/src/main/resources/application.yml
+++ b/learn-spring-security/spring-security-oauth2/gate-zuul/src/main/resources/application.yml
@@ -15,14 +15,6 @@ spring:
 zuul:
   add-proxy-headers: true
 
-  ## 认证服务
-  # 响应的路径
-  routes:
-    res: /res/**
-    auth:
-      path: /auth-server/**
-      service-id: auth-server
-
 security:
   basic:
     enabled: false
@@ -32,13 +24,8 @@ security:
       client-secret: 123456
       grant-type: client_credentials
       access-token-uri: /auth-server/oauth/token
-#      user-authorization-uri: http://localhost:8081/oauth/authorize
       scope: all
-  # userInfoUri用户端点的URI，用于获取当前用户详细信息
     resource:
       loadBalanced: true
       user-info-uri: /auth-server/user/me
-#      prefer-token-info: false
-    # 解析令牌的地址
-    authorization:
-      check-token-access: http://localhost:8001/oauth/check_token
+      prefer-token-info: false
