--- a/learn-spring-security/spring-security-oauth2/gate-zuul/pom.xml
+++ b/learn-spring-security/spring-security-oauth2/gate-zuul/pom.xml
@@ -29,6 +29,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
