docs(learn-spring-security/doc):Spring-Security第一篇.md 添加HttpSecurity 常用方法和说明

--- a/learn-spring-security/pom.xml
+++ b/learn-spring-security/pom.xml
@@ -11,5 +11,6 @@
     <modules>
         <module>spring-security-oauth2</module>
         <module>spring-security</module>
+        <module>InMemory-Spring-Security</module>
     </modules>
 </project>
