--- a/learn-spring-security/spring-security-oauth2/res-server/src/main/resources/application.properties
+++ b/learn-spring-security/spring-security-oauth2/res-server/src/main/resources/application.properties
@@ -9,5 +9,5 @@ security.oauth2.resource.user-info-uri=http://localhost:8081/user/me
 # \u89E3\u6790\u4EE4\u724C\u7684\u5730\u5740
 security.oauth2.authorization.check-token-access=http://localhost:8001/oauth/check_token
 
-#eureka.client.serviceUrl.defaultZone=http://jackie:123456@alpha-eureka-01:8761/eureka/,http://jackie:123456@alpha-eureka-02:8762/eureka/,http://jackie:123456@alpha-eureka-03:8763/eureka/
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://jackie:123456@alpha-eureka-01:8761/eureka/,http://jackie:123456@alpha-eureka-02:8762/eureka/,http://jackie:123456@alpha-eureka-03:8763/eureka/
+#eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
