--- a/learn-spring-security/InMemory-Spring-Security/pom.xml
+++ b/learn-spring-security/InMemory-Spring-Security/pom.xml
@@ -2,14 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>learn-spring-security</artifactId>
-        <groupId>com.fengxuechao</groupId>
-        <version>1.0-snapshot</version>
-    </parent>
+    <groupId>com.fengxuechao</groupId>
+    <artifactId>InMemory-Spring-Security</artifactId>
+    <version>1.0-snapshot</version>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>InMemory-Spring-Security</artifactId>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.19.RELEASE</version>
+    </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+            <version>1.2.3.RELEASE</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
