--- a/learn-spring-security/InMemory-Spring-Security/pom.xml
+++ b/learn-spring-security/InMemory-Spring-Security/pom.xml
@@ -19,6 +19,10 @@
             <artifactId>spring-cloud-starter-oauth2</artifactId>
             <version>1.2.3.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
     </dependencies>
 
 
