fix(InMemory-Spring-Security):资源服务器配置

--- a/learn-spring-security/InMemory-Spring-Security/pom.xml
+++ b/learn-spring-security/InMemory-Spring-Security/pom.xml
@@ -45,7 +45,7 @@
     </dependencies>
 
     <build>
-        <resources>
+        <!--<resources>
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
@@ -53,7 +53,7 @@
                     <exclude>*.jks</exclude>
                 </excludes>
             </resource>
-        </resources>
+        </resources>-->
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
