--- a/learn-spring-security/InMemory-Spring-Security/src/main/resources/application.properties
+++ b/learn-spring-security/InMemory-Spring-Security/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.profiles.include=jwt
+security.oauth2.resource.jwt.key-pair.alias=jwt_rsa
+security.oauth2.resource.jwt.key-pair.store-password=123456
