--- a/learn-spring-security/spring-security-oauth2-all/oauth2-resource-server/pom.xml
+++ b/learn-spring-security/spring-security-oauth2-all/oauth2-resource-server/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <groupId>com.fengxuechao</groupId>
-    <artifactId>InMemory-Spring-Security</artifactId>
+    <artifactId>oauth2-resource-server</artifactId>
     <version>1.0-snapshot</version>
     <modelVersion>4.0.0</modelVersion>
 
