feat(sprig-security-oauth2-all):认证鉴权与API权限控制

--- a/learn-spring-security/spring-security-oauth2-all/oauth2-auth-server/src/main/resources/application.yml
+++ b/learn-spring-security/spring-security-oauth2-all/oauth2-auth-server/src/main/resources/application.yml
@@ -1,10 +1,8 @@
 spring:
   profiles:
     include: inMemory
-security:
-  oauth2:
-    resource:
-      jwt:
-        key-pair:
-          alias: jwt_rsa
-          store-password: 123456
+
+logging:
+  level:
+    root: warn
+    com.fengxuechao.examples.auth: debug
