feat(sprig-security-oauth2-all):添加logback+Kafka集成
logback 输出日志到 Kafka 集群

--- a/learn-spring-security/spring-security-oauth2-all/oauth2-auth-server/pom.xml
+++ b/learn-spring-security/spring-security-oauth2-all/oauth2-auth-server/pom.xml
@@ -14,10 +14,32 @@
     </parent>
 
     <dependencies>
+        <!--低于1.2.3，KafkaAppender会报错-->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.2.3</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
             <version>1.2.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <!--logback-kafka-appender依赖-->
+        <dependency>
+            <groupId>com.github.danielwegener</groupId>
+            <artifactId>logback-kafka-appender</artifactId>
+            <version>0.2.0-RC2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <scope>compile</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
