--- a/learn-spring-security/spring-security-oauth2-all/oauth2-auth-server/src/main/resources/application.yml
+++ b/learn-spring-security/spring-security-oauth2-all/oauth2-auth-server/src/main/resources/application.yml
@@ -3,6 +3,7 @@ spring:
     include: inMemory
 
 logging:
+  kafka:
+    enable: false
   level:
-    root: warn
     com.fengxuechao.examples.auth: debug
