--- a/learn-spring-security/spring-security-oauth2-all/oauth2-auth-server/src/main/resources/application.yml
+++ b/learn-spring-security/spring-security-oauth2-all/oauth2-auth-server/src/main/resources/application.yml
@@ -1,9 +1,7 @@
 spring:
   profiles:
-    include: inMemory
-
+    include: inMemory,redis
 logging:
-  kafka:
-    enable: false
   level:
+    root: info
     com.fengxuechao.examples.auth: debug
